$Id$
Version 1.1.2 (?? ??? 2006)
 - Implemented Category Color RFE and PATCH ( many seperate entries )
 - Fixed bug [ 1600208 ] send_reminders.php and postgresql
 - Fixed bug [ 1599634 ] 'colors.php' doesn't work properly
 - Fixed bug [ 1600194 ] Minical dropping date in URL parsing
 - Implemented RFE [ 468275 ] a variable for background picture
 - Implemented RFE [ 765824 ] Start week on other days as well
 - Fixed bug [ 1578813 ] very compl. handling of UAC for selecting participant
 - Fixed bug [ 1598283 ] 'access.php' is shrinked in German
 - Stanardized use of print_color_input_html() function for all color selections
 - Modified access.php to allow easier switching between users
 - Moved access DEFINEs into includes/access.php
 - Added new user option 'Display Long Day Names'
 - Added new Color Picker
 - Fixed bug [ 1573961 ] Excessive LDAP connections for single calendar query
 - Fixed bug [ 1594714 ] upcomming.php doesn't work
 - Closed bug [ 1508701 ] starting 'ControlPanel' creates an error
 - Fixed bug [ 1593524 ] No CSS for "login.php" since "css_cacher-php" update
 - Added new About WebCalendar page
 - Fixed problem with AS used in sql table aliases
 - Fixed bug [ 1561485 ] User sorting doesn't work with LDAP users
 - Fixed bug [ 1592079 ] undefined constant MENU_DATE_TOP
 - Fixed bug [ 1591892 ] disabling one 'root'-item the whole menue-items are
 - Implemented RFE [ 1425299 ] location of the 'topmenu' below customize header
 - Implemented RFE [ 1455565 ] Nice menu.
 - Implemented RFE [ 1532277 ] First- and Lastname should be displayed instead of Username
 - Implemented RFE [ 1588600 ] configurable menu
 - Fixed "bug" [ 1591243 ] perl-script 'check_translation.pl' and
   'update_translation.pl' doesn't work properly.
   Changed $show_missing = 0 back to $show_missing = 1.
 - Fixed bug [ 1591329 ] preview-view of the calendar in 'system-settings' has 2 'today
 - Fixed bug [ 1590474 ] Webcalendar 1.1.1 Repeat